* (bug 13140) Show parent categories in category namespace
* (bug 13149) Correctly format 'fileexists' message on Upload page
* Make the default filepageexists message accurate
* (bug 12988) $wgMinimalPasswordLength no longer breaks create user by email
* (bug 13022) Fix upload from URL on PHP 5.0.x
* (bug 13132) Unable to unprotect pages protected with earlier versions of MediaWiki

=== API changes in 1.13 ===

* Fixing main page display in meta=siteinfo
* (bug 13128) Add patrolled flag to list=recentchanges
* Implemented {bl,ei,iu}redirect (lists links through redirects as well)
* (bug 13154) Introducing subpages flag to meta=siteinfo&siprop=namespaces
* (bug 13157) Adding ucuserprefix parameter to list=usercontibs

=== Languages updated in 1.13 ===

* Afrikaans (af)
* Gheg Albanian (aln)
* Amharic (am)
* Aragonese (an)
* Arabic (ar)
* Asturian (ast)
* Kotava (avk)
* Samogitian (bat-smg)
* Bulgarian (bg)
* Catalan (ca)
* Crimean Turkish (Cyrillic) (crh-cyrl)
* Crimean Turkish (Latin) (crh-latn)
* Czech (cs)
* Welsh (cy)
* Danish (da)
* Lower Sorbian (dsb)
* Greek (el)
* Esperanto (eo)
* Spanish (es)
* Estonian (et)
* Extremaduran (ext)
* Finnish (fi)
* Faroese (fo)
* French (fr)
* Franco-Provençal (frp)
* Friulian (fur)
* Irish (ga)
* Gan (gan)
* Galician (gl)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Eastern Canadian (Unified Canadian Aboriginal Syllabics) (ike-cans)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kalaallisut (kl)
* Khmer (km)
* Latin (la)
* Luxembourgish (lb)
* Limburgish (li)
* Lao (lo)
* Lithuanian (lt)
* Malayalam (ml)
* Moldavian (mo)
* Marathi (mr)
* Low German (nds)
* Dutch (nl)
* Norwegian Nynorsk (nn)
* Norwegian (bokmål)‬ (no)
* Polish (pl)
* Pashto (ps)
* Portuguese (pt)
* Russian (ru)
* Yakut (sah)
* Sassaresu (sdc)
* Slovak (sk)
* Somali (so)
* Albanian (sq)
* Sranan Tongo (srn)
* Seeltersk (stq)
* Swedish (sv)
* Tamil (ta)
* Telugu (te)
* Tajik (tg)
* Thai (th)
* Turkish (tr)
* Tuvinian (tyv)